# Hosrlaravel

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.build.mjs  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  usage.md
scripts/: build-ui-direct.mjs  generate-docs-screenshots.ps1  helper-service-status.ps1  install-helper-service.ps1  kill-laraboxs-dev.ps1  package-preview-no-clean.ps1  package-preview.ps1  prepare-tauri-resources.ps1  run-helper-elevated.ps1  uninstall-helper-service.ps1
src-tauri/: Cargo.toml  tauri.build.override.json  tauri.conf.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: main.rs
src/api/: dialogs.ts  httpSecurity.ts  runtimeJobs.ts  server.ts  siteCommandJobs.ts  siteJobs.ts  siteWorkers.ts
src/cli/: index.ts
src/core/: config.ts  databaseManager.ts  defender.ts  developerTools.ts  envFile.ts  hosts.ts  laravelInstaller.ts  logging.ts  mongodb.ts  mysql.ts  nginx.ts  paths.ts  php.ts  (+19 more)
tests/: api-security.test.ts  cli.test.ts  defender.test.ts  hosts.test.ts  logging.test.ts  mongodb.test.ts  mysql.test.ts  nginx.test.ts  php.test.ts  phpExtensions.test.ts  phpmyadmin.test.ts  redis.test.ts  runtime-installer.test.ts  runtimes-php-extension-recovery.test.ts  runtimes.test.ts  site-open.test.ts  sites.test.ts  ssl.test.ts  tools.test.ts
(+10 files in other folders)
